# ttyd

./: .gitignore  CMakeLists.txt
.github/workflows/: backend.yml  ci.yml  pr-agent.yml
app/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
app/e2e/: api.spec.ts  debug.spec.ts  helpers.ts  session.spec.ts  shell.spec.ts  solo.spec.ts
app/e2e/fixtures/ink-agent/: package-lock.json  package.json  tsconfig.json
app/e2e/fixtures/ink-agent/src/: index.tsx
app/src/: App.tsx  main.tsx
app/src/components/modal/: index.tsx
app/src/components/session/: SessionList.tsx  index.tsx  session.scss
app/src/components/terminal/: index.tsx  xterm.scss
app/src/components/terminal/xterm/: index.ts
app/src/components/terminal/xterm/addons/: overlay.ts  shellIntegration.ts  zmodem.ts
app/src/style/: index.scss
app/src/types/: zmodem-js.d.ts
app/src/utils/: ansiString.ts
scripts/: cross-build.sh  run-test.sh
src/: api.c  api.h  http.c  logger.c  logger.h  osc133.c  osc133.h  profile.c  profile.h  protocol.c  server.c  server.h  session.c  session.h  utils.c  utils.h
tests/: CMakeLists.txt  libwebsocket_sub.c  test_api.c  test_osc133.c  test_session.c  test_utils.c
